--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="sanss.pdf">Resume</a></li>
+          <li><a href="Resume_Pf.pdf">Resume</a></li>
           <li><a href="mailto: sanskritiverma03@gmail.com">Contact</a></li>
         </ul>
       </nav>
